playgrounds/devops/kubernetes/hackernoon-nginx-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.org/ssl-services: 'hello-world-svc'
spec:
  tls:
    - hosts:
        - api.sample.com
      secretName: tls-certificate
  rules:
    - host: api.sample.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world-svc
              servicePort: 8080
